<resources>
    <string name="app_name">OneSwipe</string>
    <string name="apk_is_broken">This apk is broken.\n You must install at google play store!!</string>
    <string name="app_name_premium">One Swipe premium</string>
    <string name="app_name_lite">One Swipe lite</string>
    <string name="nofification_text">Running. Touch for settings</string>
    <string name="activity_title_settings">One Swipe Beta</string>
    <string name="activity_title_developer_settings">Developer Settings</string>
    <string name="activity_title_settings_trigger_area">Trigger areas</string>
    <string name="activity_title_settings_theme">Theme</string>
    <string name="activity_title_settings_gesture">Gesture</string>
    <string name="activity_title_tutorial">Tutorial - Basic</string>
    <string name="action_settings">Settings</string>
    <string name="notification_text_trigger_area_disabled">Touch to start Trigger area detection!</string>
    <string name="notification_title_trigger_area_enabled">One Swipe enabled</string>
    <string name="toast_trigger_area_detect_enabled">Trigger area Detect Enabled!!</string>
    <string name="toast_trigger_area_detect_disable">Trigger area Detect Disabled!!</string>
    <string name="toast_diable_at_dock">Can not make folder at dock</string>
    <string name="toast_premium">PREMIUM VERSION</string>
    <string name="toast_pattern_fail">unlock fail</string>
    <string name="toast_lite">LITE VERSION</string>
    <string name="toast_invalid_file">invalid file</string>
    <string name="toast_have_to_pattern">Make your new unlock pattern</string>
    <string name="toast_add_item_first">Please add items before analysis</string>
    <string name="toast_not_available_dock">You can not create folder at here</string>
    <string name="toast_not_found">The application can not be found. Launch Google Play</string>
    <string name="toast_drag_help">Drag and Drop!, If you have finished editing, touch the outer part of the pad</string>
    <string name="toast_drag_finish">Finished Editing</string>
    <string name="toast_not_found_launchinfo">Can not found current application\'s launch Info</string>
    <string name="toast_media_volume_set">Media volume : %d/15</string>
    <string name="toast_accessibility_message">Please turn ON "One Swipe" service from "setting > Accessibility Options."</string>
    <string name="toast_accessibility_message_detail">"In order to use Back button, Home, Indicator, recentApps. Please turn ON "One Swipe" service.</string>
    <string name="toast_message_back_again">Please touch BACK again to exit</string>
    <string name="count">Launch count</string>
    <string name="order_by_launchcount">order by launch count</string>
    <string name="order_by_created">order by created</string>
    <string name="order_by_type">order by type</string>
    <string name="menu_applist_reload">Refresh application list</string>
    <string name="format_since_justnow">just now</string>
    <string name="format_since_minutes">minutes ago</string>
    <string name="format_since_hours">hours ago</string>
    <string name="format_since_days">days ago</string>
    <string name="format_since_months">months ago</string>
    <string name="format_since_years">years ago</string>
    <string name="format_since_minute">minute ago</string>
    <string name="format_since_hour">hour ago</string>
    <string name="format_since_day">day ago</string>
    <string name="format_since_month">month ago</string>
    <string name="format_since_year">year ago</string>
    <string name="apply">Apply</string>
    <string name="rotate">Rotate</string>
    <string name="pinlock_title">Set backup PIN</string>
    <string name="pinlock_sentence">If you forget your pattern, you can enter your backup PIN to unlock</string>
    <string name="pinlock_title_at_least">PIN must contain at least 4 numbers</string>
    <string name="pinlock_title_tap_ok">Tap Continue when finished</string>
    <string name="pinlock_title_confirm">Confirm PIN</string>
    <string name="pinlock_title_confirm_5fail">Fail to match 5 times. Confirm PIN to record a new pattern.</string>
    <string name="pinlock_title_not_match">PINs do not match.</string>
    <string name="button_continue">Continue</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select</string>
    <string name="pref_category_basic">Basic</string>
    <string name="pref_category_data">Data</string>
    <string name="pref_category_style">Style and Animation</string>
    <string name="pref_category_translations">Translations</string>
    <string name="pref_category_style_summary_animation_enabled">Animation enabled</string>
    <string name="pref_category_style_summary_animation_disabled">Animation disabled</string>
    <string name="pref_category_style_summary_gesture_enabled">Gesture enabled</string>
    <string name="pref_category_style_summary_gesture_disabled">Gesture disabled</string>
    <string name="pref_category_style_summary_statusinfo_enabled">StatusInfo enabled</string>
    <string name="pref_category_style_summary_statusinfo_disabled">StatusInfo disabled</string>
    <string name="pref_category_style_summary_show_title_enabled">Show Icon Name enabled</string>
    <string name="pref_category_style_summary_show_title_disabled">Show Icon Name disabled</string>
    <string name="pref_category_feature">Buy</string>
    <string name="pref_category_etc">ETC</string>
    <string name="pref_category_analysis">Analysis</string>
    <string name="pref_title_default">Set default colors and background image</string>
    <string name="pref_title_animation">Animation</string>
    <string name="pref_title_gesture">Gesture</string>
    <string name="pref_title_statusinfo">Status info</string>
    <string name="pref_title_show_title">Show Icon Name in pad</string>
    <string name="pref_haptic_title">Haptic effect</string>
    <string name="pref_haptic_summary">Vibration when you touch the Trigger area</string>
    <string name="pref_trigger_visible">Trigger Area Visibility</string>
    <string name="pref_trigger_visible_summary">Set Trigger Area Visibility</string>
    <string name="pref_title_buy">Upgrade to One Swipe Premium</string>
    <string name="pref_title_buy_summary">Remove all ads in this app</string>
    <string name="pref_title_how_to_use">How to use One Swipe</string>
    <string name="pref_title_how_to_use_summary">User guide for One Swipe</string>
    <string name="pref_title_translate_help_quickswipe">Translate One Swipe</string>
    <string name="pref_title_translate_help_quickswipe_summary">Please help us translate One Swipe into your language \nPlease contact us by e-mail</string>
    <string name="pref_title_translate_thanks">Thanks to</string>
    <string name="pref_title_translate_thanks_summary">Thanks to these kind people who helped us localize One Swipe</string>
    <string name="pref_title_registered_items">Registered items(App, Shortcut, Widget)</string>
    <string name="pref_title_registered_items_summary">Show your added items</string>
    <string name="pref_title_rate">Rate us 5 stars</string>
    <string name="pref_title_rate_summary">If you like OneSwipe, rate us 5 stars :)</string>
    <string name="pref_title_like_facebook">Like on Facebook</string>
    <string name="pref_title_like_facebook_summary">Get the news about One Swipe</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_feedback_summary">Feedback to developers (e-mail)</string>
    <string name="pref_title_share">Share us</string>
    <string name="pref_title_share_summary">Tell your friends you like this App</string>
    <string name="pref_title_share_message">\n\n   Let me recommend you One Swipe Application.   \n\n</string>
    <string name="pref_title_share_by_context">\n\n   Let me recommend you this app.   \n\n</string>
    <string name="pref_title_share_from_quickswipe">\n\n   Shared from One Swipe   \n\n</string>
    <string name="pref_title_pad_size">Pad size</string>
    <string name="pref_title_pad_size_summary">4x4</string>
    <string name="pref_title_pad_dynamic_pad_option">Dynamic pad option (laboratory)</string>
    <string name="pref_title_pad_dynamic_pad_option_summary_none">long press option on dynamic pad</string>
    <string name="pref_title_pad_dynamic_pad_option_summary_penwindow">pen window (galaxy note)</string>
    <string name="pref_title_pad_dynamic_pad_option_summary_forceclose">force close (root)</string>
    <string name="pref_title_pad_interaction">Interaction (laboratory)</string>
    <string name="pref_title_pad_interaction_summary_swipe_and_touch">swipe and touch</string>
    <string name="pref_title_pad_interaction_summary_swipe_and_up">swipe and up</string>
    <string name="pref_title_tutorial">Tutorial</string>
    <string name="pref_booster">Memory Booster</string>
    <string name="pref_title_share_chooseone">Choose one</string>
    <string name="pref_trigger_area_title">Trigger areas</string>
    <string name="pref_trigger_area_summary">Where on screen to swipe from</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_version_summary">1.0.0</string>
    <string name="pref_lock_create_title">Pattern lock</string>
    <string name="pref_lock_create_summary_created">pattern created</string>
    <string name="pref_lock_create_summary_not_created">pattern not created</string>
    <string name="pref_gesture_title">Gesture</string>
    <string name="pref_gesture_summary">Gesture and stay while 2 sec at pad for Gesture set</string>
    <string name="pref_cropper_title">Background image</string>
    <string name="pref_cropper_summary">Background image setting</string>
    <string name="pref_theme_select_title">Theme</string>
    <string name="pref_theme_select_summary">Theme select</string>
    <string name="pref_data_app_list_cache_reset_title">Reset icons</string>
    <string name="pref_data_app_list_cache_reset_summary">Reload all app icons from the system</string>
    <string name="pref_booster_apps_excluded_while_boosting_title">Apps excluded while boosting</string>
    <string name="pref_vibration_level_title">Vibration Level</string>
    <string name="pref_animation_duration_level_title">Animation Duration</string>
    <string name="settings_gesture_type_killprocess">Kill Application</string>
    <string name="settings_gesture_type_context">Context</string>
    <string name="settings_gesture_type_back">Back</string>
    <string name="settings_gesture_type_close">Close</string>
    <string name="settings_gesture_type_launch">Launch</string>
    <string name="settings_gesture_type_recentapplication">Recent Application</string>
    <string name="settings_gesture_type_home">Home</string>
    <string name="settings_gesture_type_indicator">Indicator</string>
    <string name="settings_gesture_type_appinfo">Application Info</string>
    <string name="settings_gesture_type_padsettings">Pad Settings</string>
    <string name="settings_gesture_type_trigger_area_detect_disable">Disable Trigger area Detection</string>
    <string name="settings_function_type_home">Home</string>
    <string name="settings_function_type_booster">Memory Booster</string>
    <string name="popupmenu_image">Quick File Open : Image</string>
    <string name="popupmenu_audio">Quick File Open : Audio</string>
    <string name="popupmenu_video">Quick File Open : Video</string>
    <string name="unnamed_folder"></string>
    <string name="tutorial_step_1">Tutorial Step 1</string>
    <string name="file">FILE</string>
    <string name="welcom_head_05">Try : Launch App</string>
    <string name="welcom_head_06">Try : Open Menu</string>
    <string name="welcom_content_05">Drag down from the corner(red circle)</string>
    <string name="welcom_content_06">Drag down from the corner(red circle)</string>
    <string name="start">START</string>
    <string name="skip">Skip</string>
</resources>